@@ -1,3 +1,9 @@
+2011-06-29
+
+	* libsylph/socket.c: win32: supported IPv6 with fallback implementation
+	  for Windows 2000.
+	* makewin32.sh: enabled IPv6.
+
 2011-06-28
 
 	* src/foldersel.c: removed alloca() calls.
